crates/compiler/test_syntax/tests/snapshots/fail/imports_missing_comma.header.roc
app [main, @Foo] { pf: platform "platform/main.roc" }
